--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
 
 .DS_Store
+NEON_height_profiles/.Rhistory
+NEON_height_profiles/.Rhistory
+NEON_height_profiles/.Rproj.user/7B408861/pcs/files-pane.pper
+NEON_height_profiles/.Rproj.user/7B408861/pcs/source-pane.pper
+NEON_height_profiles/.Rproj.user/7B408861/pcs/windowlayoutstate.pper
+NEON_height_profiles/.Rproj.user/7B408861/pcs/workbench-pane.pper
+NEON_height_profiles/.Rproj.user/7B408861/rmd-outputs
+NEON_height_profiles/.Rproj.user/7B408861/saved_source_markers
+NEON_height_profiles/.Rproj.user/7B408861/sources/per/t/1BD8BA1E
+NEON_height_profiles/.Rproj.user/7B408861/sources/per/t/1BD8BA1E-contents
+NEON_height_profiles/.Rproj.user/7B408861/sources/per/t/669D0277
+NEON_height_profiles/.Rproj.user/7B408861/sources/per/t/669D0277-contents
+NEON_height_profiles/.Rproj.user/7B408861/sources/per/t/EE81C982
+NEON_height_profiles/.Rproj.user/7B408861/sources/per/t/EE81C982-contents
+NEON_height_profiles/.Rproj.user/7B408861/sources/prop/038BA4C6
+NEON_height_profiles/.Rproj.user/7B408861/sources/prop/7D51294A
+NEON_height_profiles/.Rproj.user/7B408861/sources/prop/INDEX
+NEON_height_profiles/.Rproj.user/7B408861/viewer-cache/58827D9C.Rdata
+NEON_height_profiles/.Rproj.user/shared/notebooks/patch-chunk-names
+NEON_height_profiles/.Rhistory
