--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ NEON_height_profiles/.Rproj.user/7B408861/viewer-cache/58827D9C.Rdata
 NEON_height_profiles/.Rproj.user/shared/notebooks/patch-chunk-names
 NEON_height_profiles/.Rhistory
 .Rhistory
+.Rproj.user
